[project]
name = "rlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
authors = [
    { name = "rasdani", email = "3563550+rasdani@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/rasdani/rlm"
Repository = "https://github.com/rasdani/rlm"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
